# httpcli

./: .gitignore  Cargo.toml  README.md  form-test.http  test3.http
examples/: simple.http  test2.http
src/: cache.rs  cli.rs  client.rs  config.rs  error.rs  http_parser.rs  main.rs  request.rs  response.rs  syntax.rs  tls.rs
